# send_ctrlc

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: lib.rs  stdlib.rs  tokio.rs
